--- a/objeto_rastreado_app/pubspec.yaml
+++ b/objeto_rastreado_app/pubspec.yaml
@@ -30,11 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.0
+  image_picker: ^1.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.0.5
   shared_preferences: ^2.2.2
   google_fonts: ^6.1.0
   flutter_animate: ^4.5.0
